# dtu-course-analyzer

./: .gitignore  CLAUDE.md  GEMINI.md  PR_DESCRIPTION.md  README.md  TODO_RELEASE.md  analyzer.py  auth.py  data.json  extension.crx  getCourseNumbers.py  logger_config.py  pyproject.toml  pytest.ini  requirements.txt  scraper.py  scraper_async.py  setup.py  setup.sh  validate_pipeline.py  validate_refactor.py  validator.py
.claude/: hooks.json  settings.json
.claude/agents/: extension-dev.md  scraper-expert.md
.claude/commands/: bump-version.md  i18n.md  preflight.md  sync-branch.md  update-data.md
.github/workflows/: check-course-updates.yml  scrape.yml  sync-claude-md.yml  test.yml
config/: config.example.yaml
data/: README.md
docs/: CHROME_WEB_STORE_RELEASE.md  CHROME_WEB_STORE_RELEASE_NOTES.md  FIREFOX_ADDONS_RELEASE.md  REFACTORING_COMPLETE.md  ROADMAP.md  TEST_RESULTS.md  THIRD_PARTY_LICENSES.md  VALIDATION_REPORT.md
extension/: background.js  background_V3.js  contentscript.js  db.html  manifest.json  manifest_V3.json
extension/db/: data.js  data.json
extension/js/: init_table.js  language-toggle.js  table.js
release-artifacts/firefox-2.2.2/: AMO_REVIEWER_NOTES.md  FIREFOX_ADDONS_RELEASE_NOTES.md
source-code/: README.md  build.md  requirements.txt  scraper_async.py  setup.py
source-code/extension/: contentscript.js  db.html  manifest.json
source-code/extension/db/: data.js
source-code/extension/js/: init_table.js  language-toggle.js
source-code/src/dtu_analyzer/analysis/: __init__.py  analyzer.py
source-code/src/dtu_analyzer/utils/: logger.py  prepender.py
source-code/src/dtu_analyzer/validation/: __init__.py
source-code/tests/: test_analyzer.py  test_scraper.py
src/dtu_analyzer/: __init__.py  config.py
src/dtu_analyzer/analysis/: analyzer.py
src/dtu_analyzer/auth/: __init__.py  authenticator.py
src/dtu_analyzer/parsers/: __init__.py  base.py  grade_parser.py  review_parser.py
src/dtu_analyzer/scrapers/: __init__.py  async_scraper.py  threaded_scraper.py
src/dtu_analyzer/scripts/: __init__.py  check_for_updates.py  get_course_numbers.py
src/dtu_analyzer/utils/: __init__.py
src/dtu_analyzer/validation/: validator.py
templates/: db.html  init_table.js
tests/: README.md  __init__.py  conftest.py  test_analyzer.py  test_check_for_updates.py  test_packaging_metadata.py  test_scraper.py  test_scraper_hardening.py  validate_pipeline.py  validate_refactor.py
